--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# Byte-compiled / optimized / DLL files / pip
+__pycache__/
+*.py[cod]
+*$py.class
+src/
+
+# IDE
+.idea/
+
+# Bot-specific files
 config.ini
