--- a/config.ini.example
+++ b/config.ini.example
@@ -3,6 +3,10 @@ token = 1337:1234567890abcdefgh
 
 [REDIS]
 #db = 0
-host = localhost
-port = 6379
-#socket_path = /pfad/zu/deiner/.redis/sock
+#host = localhost
+#port = 6379
+#socket_path = /home/user/.redis/sock
+
+[ADMIN]
+# Must be integers!
+id = [1337]
