--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 BOT_TOKEN=123456789:abcdefghijklmnopqrstuvxwyz
-MYSQL_URL=user:password@tcp(127.0.0.1:3306)/database_name?charset=utf8mb4&parseTime=True&loc=Local
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_USER=myuser
+MYSQL_PASSWORD=mypassword
+MYSQL_DB=mydb
