Add Docker support

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BOT_TOKEN=123456789:abcdefghijklmnopqrstuvxwyz
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=127.0.0.1 # Use 'db' for Docker
 MYSQL_PORT=3306
 MYSQL_USER=myuser
 MYSQL_PASSWORD=mypassword
